16.4:
    Neue Graphic für Pacman
    Löschen einer unnötigen Funktion
    ein großes If mit switch verändert
    Code Auskommentiert, für besseres Verständnis
    Angefangen Variabelnamen mit deutschen Auszutauschen