@@ -1,0 +1,28 @@
+package com.zetcode;
+
+import java.awt.EventQueue;
+import javax.swing.JFrame;
+
+public class Main extends JFrame {
+
+    public Main() {
+        initUI();
+    }
+
+    private void initUI() {
+        add(new Board());
+        setTitle("Pacman");
+        setDefaultCloseOperation(EXIT_ON_CLOSE);
+        setSize(380, 420);
+        setLocationRelativeTo(null);
+    }
+
+    public static void main(String[] args) {
+
+        EventQueue.invokeLater(() -> {
+
+            var ex = new Main();
+            ex.setVisible(true);
+        });
+    }
+}
