@@ -1,31 +1,8 @@
 package com.zetcode;
 
-import java.awt.EventQueue;
-import javax.swing.JFrame;
+public class Pacman {
+    public int leben;
+    public int x, y;
+    public int dx, dy;
 
-public class Pacman extends JFrame {
-
-    public Pacman() {
-
-        initUI();
-    }
-
-    private void initUI() {
-
-        add(new Board());
-
-        setTitle("Pacman");
-        setDefaultCloseOperation(EXIT_ON_CLOSE);
-        setSize(380, 420);
-        setLocationRelativeTo(null);
-    }
-
-    public static void main(String[] args) {
-
-        EventQueue.invokeLater(() -> {
-
-            var ex = new Pacman();
-            ex.setVisible(true);
-        });
-    }
 }
