@@ -4,3 +4,4 @@
     ein großes If mit switch verändert
     Code Auskommentiert, für besseres Verständnis
     Angefangen Variabelnamen mit deutschen Auszutauschen
+    Klasse für Geister erstellt und alles diesbezüglich ausgetauscht
